--- a/CinemaBook/Scence/Booking/TimeShow/view/TimeShowViewController.xib
+++ b/CinemaBook/Scence/Booking/TimeShow/view/TimeShowViewController.xib
@@ -61,6 +61,9 @@
                                     </constraints>
                                     <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <state key="normal" title="Button"/>
+                                    <connections>
+                                        <action selector="btn_popToViewController:" destination="-1" eventType="touchUpInside" id="OJa-9Q-Upc"/>
+                                    </connections>
                                 </button>
                             </subviews>
                             <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
@@ -95,19 +98,89 @@
                             </userDefinedRuntimeAttributes>
                         </view>
                         <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="T5y-Yu-QqE">
-                            <rect key="frame" x="0.0" y="50" width="414" height="768"/>
+                            <rect key="frame" x="0.0" y="50" width="414" height="708"/>
                             <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         </tableView>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VD4-DH-Yze">
+                            <rect key="frame" x="0.0" y="758" width="414" height="60"/>
+                            <subviews>
+                                <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="YAk-P5-woO">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="60"/>
+                                    <subviews>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WNF-dt-UzW">
+                                            <rect key="frame" x="0.0" y="0.0" width="207" height="60"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qzQ-sx-N1a">
+                                                    <rect key="frame" x="96.5" y="10" width="14" height="26.5"/>
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="22"/>
+                                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Gợi ý cho bạn" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9N5-mp-qbI">
+                                                    <rect key="frame" x="48" y="36.5" width="111.5" height="21.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <constraints>
+                                                <constraint firstItem="qzQ-sx-N1a" firstAttribute="top" secondItem="WNF-dt-UzW" secondAttribute="top" constant="10" id="79v-CJ-LVr"/>
+                                                <constraint firstItem="9N5-mp-qbI" firstAttribute="top" secondItem="qzQ-sx-N1a" secondAttribute="bottom" id="8mb-vA-d4t"/>
+                                                <constraint firstItem="qzQ-sx-N1a" firstAttribute="centerX" secondItem="WNF-dt-UzW" secondAttribute="centerX" id="IQ4-Ap-cC3"/>
+                                                <constraint firstItem="9N5-mp-qbI" firstAttribute="centerX" secondItem="WNF-dt-UzW" secondAttribute="centerX" id="vJ9-QC-vdg"/>
+                                            </constraints>
+                                        </view>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DES-pQ-aoy">
+                                            <rect key="frame" x="207" y="0.0" width="207" height="60"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="30" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="s6Q-tF-nT0">
+                                                    <rect key="frame" x="89" y="10" width="29" height="26.5"/>
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="22"/>
+                                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tất cả các rạp" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WYX-hb-rua">
+                                                    <rect key="frame" x="46.5" y="36.5" width="114" height="21.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <constraints>
+                                                <constraint firstItem="s6Q-tF-nT0" firstAttribute="top" secondItem="DES-pQ-aoy" secondAttribute="top" constant="10" id="LZ7-Cq-29d"/>
+                                                <constraint firstItem="s6Q-tF-nT0" firstAttribute="centerX" secondItem="DES-pQ-aoy" secondAttribute="centerX" id="NTr-CK-qlr"/>
+                                                <constraint firstItem="WYX-hb-rua" firstAttribute="top" secondItem="s6Q-tF-nT0" secondAttribute="bottom" id="TTo-fA-U62"/>
+                                                <constraint firstItem="WYX-hb-rua" firstAttribute="centerX" secondItem="DES-pQ-aoy" secondAttribute="centerX" id="cPO-0f-gUs"/>
+                                            </constraints>
+                                        </view>
+                                    </subviews>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </stackView>
+                            </subviews>
+                            <color key="backgroundColor" systemColor="systemGrayColor" red="0.5568627451" green="0.5568627451" blue="0.57647058819999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="60" id="CI6-mH-R5u"/>
+                                <constraint firstItem="YAk-P5-woO" firstAttribute="top" secondItem="VD4-DH-Yze" secondAttribute="top" id="Hpr-gP-sby"/>
+                                <constraint firstAttribute="bottom" secondItem="YAk-P5-woO" secondAttribute="bottom" id="MP9-F7-7pe"/>
+                                <constraint firstItem="YAk-P5-woO" firstAttribute="leading" secondItem="VD4-DH-Yze" secondAttribute="leading" id="WS6-Ri-r6u"/>
+                                <constraint firstAttribute="trailing" secondItem="YAk-P5-woO" secondAttribute="trailing" id="xN4-C5-MCf"/>
+                            </constraints>
+                        </view>
                     </subviews>
                     <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                     <constraints>
+                        <constraint firstItem="T5y-Yu-QqE" firstAttribute="leading" secondItem="CfD-mt-fKj" secondAttribute="leading" id="82f-eH-fp5"/>
+                        <constraint firstAttribute="bottom" secondItem="VD4-DH-Yze" secondAttribute="bottom" id="JdF-HG-kcp"/>
                         <constraint firstItem="4pd-o5-JZf" firstAttribute="top" secondItem="CfD-mt-fKj" secondAttribute="top" id="NUH-mj-wPt"/>
                         <constraint firstItem="4pd-o5-JZf" firstAttribute="leading" secondItem="CfD-mt-fKj" secondAttribute="leading" id="Pqh-eO-JuO"/>
                         <constraint firstAttribute="trailing" secondItem="4pd-o5-JZf" secondAttribute="trailing" id="XKK-sS-ajh"/>
-                        <constraint firstItem="T5y-Yu-QqE" firstAttribute="leading" secondItem="CfD-mt-fKj" secondAttribute="leading" id="s8l-sY-hY7"/>
-                        <constraint firstAttribute="trailing" secondItem="T5y-Yu-QqE" secondAttribute="trailing" id="tDT-8l-F7E"/>
-                        <constraint firstAttribute="bottom" secondItem="T5y-Yu-QqE" secondAttribute="bottom" id="u1J-gk-HFp"/>
-                        <constraint firstItem="T5y-Yu-QqE" firstAttribute="top" secondItem="4pd-o5-JZf" secondAttribute="bottom" id="z9j-uN-aZ1"/>
+                        <constraint firstAttribute="trailing" secondItem="T5y-Yu-QqE" secondAttribute="trailing" id="eK4-92-nHQ"/>
+                        <constraint firstAttribute="trailing" secondItem="VD4-DH-Yze" secondAttribute="trailing" id="gg6-Kz-3id"/>
+                        <constraint firstItem="VD4-DH-Yze" firstAttribute="leading" secondItem="CfD-mt-fKj" secondAttribute="leading" id="msg-4o-H48"/>
+                        <constraint firstItem="T5y-Yu-QqE" firstAttribute="top" secondItem="4pd-o5-JZf" secondAttribute="bottom" id="qmt-lP-92r"/>
+                        <constraint firstItem="VD4-DH-Yze" firstAttribute="top" secondItem="T5y-Yu-QqE" secondAttribute="bottom" id="zJw-Pb-qJy"/>
                     </constraints>
                 </view>
             </subviews>
