--- a/CinemaBook/Scence/NewFeed/view/NewFeedViewController.xib
+++ b/CinemaBook/Scence/NewFeed/view/NewFeedViewController.xib
@@ -10,6 +10,8 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="NewFeedViewController" customModule="CinemaBook" customModuleProvider="target">
             <connections>
+                <outlet property="BmoNavigation" destination="Bkq-1f-43k" id="XoH-Zi-ZSZ"/>
+                <outlet property="BmoViewplayer" destination="YCG-Dm-PDw" id="5UQ-uE-d5B"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -21,18 +23,26 @@
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dhu-lT-jyb">
                     <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                     <subviews>
-                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Bkq-1f-43k">
-                            <rect key="frame" x="0.0" y="0.0" width="414" height="50"/>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Bkq-1f-43k" customClass="BmoViewPagerNavigationBar" customModule="BmoViewPager">
+                            <rect key="frame" x="0.0" y="0.0" width="414" height="40"/>
                             <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                             <constraints>
-                                <constraint firstAttribute="height" constant="50" id="jox-RM-tKw"/>
+                                <constraint firstAttribute="height" constant="40" id="jox-RM-tKw"/>
                             </constraints>
+                        </view>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YCG-Dm-PDw" customClass="BmoViewPager" customModule="BmoViewPager">
+                            <rect key="frame" x="0.0" y="40" width="414" height="778"/>
+                            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         </view>
                     </subviews>
                     <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                     <constraints>
+                        <constraint firstAttribute="trailing" secondItem="YCG-Dm-PDw" secondAttribute="trailing" id="895-0a-HKU"/>
                         <constraint firstItem="Bkq-1f-43k" firstAttribute="top" secondItem="dhu-lT-jyb" secondAttribute="top" id="Alr-Nf-eUZ"/>
                         <constraint firstAttribute="trailing" secondItem="Bkq-1f-43k" secondAttribute="trailing" id="FDp-ht-4EN"/>
+                        <constraint firstItem="YCG-Dm-PDw" firstAttribute="leading" secondItem="dhu-lT-jyb" secondAttribute="leading" id="Kyb-N7-7lM"/>
+                        <constraint firstItem="YCG-Dm-PDw" firstAttribute="top" secondItem="Bkq-1f-43k" secondAttribute="bottom" id="gl7-H5-n9d"/>
+                        <constraint firstAttribute="bottom" secondItem="YCG-Dm-PDw" secondAttribute="bottom" id="sJT-Il-0PE"/>
                         <constraint firstItem="Bkq-1f-43k" firstAttribute="leading" secondItem="dhu-lT-jyb" secondAttribute="leading" id="th0-mB-7kO"/>
                     </constraints>
                 </view>
