--- a/CinemaBook/Scence/NewFeed/Movie/view/MovieViewController.xib
+++ b/CinemaBook/Scence/NewFeed/Movie/view/MovieViewController.xib
@@ -10,6 +10,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="MovieViewController" customModule="CinemaBook" customModuleProvider="target">
             <connections>
+                <outlet property="collectionViews" destination="Pbh-UF-bLe" id="1hE-Kk-jre"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -20,7 +21,95 @@
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AX9-Us-uV6">
                     <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                    <subviews>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="toq-Pw-i4J">
+                            <rect key="frame" x="0.0" y="0.0" width="414" height="50"/>
+                            <subviews>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="PHIM" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xhv-2A-rCf">
+                                    <rect key="frame" x="10" y="12" width="56" height="26.5"/>
+                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="22"/>
+                                    <nil key="textColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mHj-dr-pim">
+                                    <rect key="frame" x="214" y="10" width="150" height="30"/>
+                                    <subviews>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon-dropdown" translatesAutoresizingMaskIntoConstraints="NO" id="XjN-4u-kEY">
+                                            <rect key="frame" x="123" y="4" width="22" height="22"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="22" id="5J2-tQ-2Le"/>
+                                                <constraint firstAttribute="height" constant="22" id="CQQ-jq-Wse"/>
+                                            </constraints>
+                                        </imageView>
+                                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Tất cả" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="fqb-yQ-Kfv">
+                                            <rect key="frame" x="10" y="0.0" width="105" height="30"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                            <textInputTraits key="textInputTraits"/>
+                                        </textField>
+                                    </subviews>
+                                    <color key="backgroundColor" systemColor="systemGray6Color" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="30" id="8F2-lr-uGw"/>
+                                        <constraint firstAttribute="trailing" secondItem="XjN-4u-kEY" secondAttribute="trailing" constant="5" id="AYa-nh-U53"/>
+                                        <constraint firstItem="XjN-4u-kEY" firstAttribute="leading" secondItem="fqb-yQ-Kfv" secondAttribute="trailing" constant="8" id="Bpm-5w-fUt"/>
+                                        <constraint firstItem="XjN-4u-kEY" firstAttribute="centerY" secondItem="mHj-dr-pim" secondAttribute="centerY" id="D6E-bw-9un"/>
+                                        <constraint firstAttribute="bottom" secondItem="fqb-yQ-Kfv" secondAttribute="bottom" id="VHO-28-jzY"/>
+                                        <constraint firstItem="fqb-yQ-Kfv" firstAttribute="leading" secondItem="mHj-dr-pim" secondAttribute="leading" constant="10" id="WQR-6S-1WZ"/>
+                                        <constraint firstItem="fqb-yQ-Kfv" firstAttribute="top" secondItem="mHj-dr-pim" secondAttribute="top" id="hch-8L-Zzq"/>
+                                        <constraint firstAttribute="width" constant="150" id="t9T-hw-thU"/>
+                                    </constraints>
+                                    <userDefinedRuntimeAttributes>
+                                        <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                            <real key="value" value="10"/>
+                                        </userDefinedRuntimeAttribute>
+                                        <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
+                                            <real key="value" value="1"/>
+                                        </userDefinedRuntimeAttribute>
+                                        <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
+                                            <color key="value" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </userDefinedRuntimeAttribute>
+                                    </userDefinedRuntimeAttributes>
+                                </view>
+                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="magnifyingglass" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="CBm-Cz-7wL">
+                                    <rect key="frame" x="372" y="15" width="22" height="20"/>
+                                    <constraints>
+                                        <constraint firstAttribute="width" constant="22" id="Jzl-AU-Vk0"/>
+                                        <constraint firstAttribute="height" constant="22" id="ReA-8b-sLZ"/>
+                                    </constraints>
+                                </imageView>
+                            </subviews>
+                            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                            <constraints>
+                                <constraint firstItem="CBm-Cz-7wL" firstAttribute="centerY" secondItem="toq-Pw-i4J" secondAttribute="centerY" id="0G8-97-pd6"/>
+                                <constraint firstItem="Xhv-2A-rCf" firstAttribute="leading" secondItem="toq-Pw-i4J" secondAttribute="leading" constant="10" id="7cA-7E-LaQ"/>
+                                <constraint firstItem="mHj-dr-pim" firstAttribute="centerY" secondItem="toq-Pw-i4J" secondAttribute="centerY" id="aq1-hT-yQj"/>
+                                <constraint firstItem="Xhv-2A-rCf" firstAttribute="centerY" secondItem="toq-Pw-i4J" secondAttribute="centerY" id="lTy-ZC-UHA"/>
+                                <constraint firstItem="CBm-Cz-7wL" firstAttribute="leading" secondItem="mHj-dr-pim" secondAttribute="trailing" constant="8" id="qhY-ks-gBS"/>
+                                <constraint firstAttribute="height" constant="50" id="qog-Cy-43N"/>
+                                <constraint firstAttribute="trailing" secondItem="CBm-Cz-7wL" secondAttribute="trailing" constant="20" id="rP8-Oz-C7k"/>
+                            </constraints>
+                        </view>
+                        <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="Pbh-UF-bLe">
+                            <rect key="frame" x="0.0" y="50" width="414" height="768"/>
+                            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                            <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Y8k-oY-bZb">
+                                <size key="itemSize" width="128" height="128"/>
+                                <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                            </collectionViewFlowLayout>
+                        </collectionView>
+                    </subviews>
                     <color key="backgroundColor" systemColor="systemGray6Color" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <constraints>
+                        <constraint firstItem="Pbh-UF-bLe" firstAttribute="top" secondItem="toq-Pw-i4J" secondAttribute="bottom" id="7sm-hv-s8F"/>
+                        <constraint firstItem="toq-Pw-i4J" firstAttribute="leading" secondItem="AX9-Us-uV6" secondAttribute="leading" id="95p-SY-oPN"/>
+                        <constraint firstAttribute="bottom" secondItem="Pbh-UF-bLe" secondAttribute="bottom" id="I1I-sI-MBD"/>
+                        <constraint firstItem="Pbh-UF-bLe" firstAttribute="leading" secondItem="AX9-Us-uV6" secondAttribute="leading" id="bfC-IK-DHC"/>
+                        <constraint firstAttribute="trailing" secondItem="Pbh-UF-bLe" secondAttribute="trailing" id="fAo-Gb-B5T"/>
+                        <constraint firstAttribute="trailing" secondItem="toq-Pw-i4J" secondAttribute="trailing" id="k8V-us-2Pt"/>
+                        <constraint firstItem="toq-Pw-i4J" firstAttribute="top" secondItem="AX9-Us-uV6" secondAttribute="top" id="z1h-XG-jvV"/>
+                    </constraints>
                 </view>
             </subviews>
             <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
@@ -34,4 +123,8 @@
             <point key="canvasLocation" x="132" y="96"/>
         </view>
     </objects>
+    <resources>
+        <image name="icon-dropdown" width="24" height="24"/>
+        <image name="magnifyingglass" catalog="system" width="128" height="115"/>
+    </resources>
 </document>
