--- a/CinemaBook/Scence/NewFeed/videoShort/view/videoShortViewController.xib
+++ b/CinemaBook/Scence/NewFeed/videoShort/view/videoShortViewController.xib
@@ -10,7 +10,9 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="videoShortViewController" customModule="CinemaBook" customModuleProvider="target">
             <connections>
+                <outlet property="collectionView" destination="iXA-5s-jro" id="OAm-sq-USd"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
+                <outlet property="view_of_collection" destination="Bw7-JA-DDt" id="UQl-ZH-Yd4"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -20,7 +22,25 @@
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Bw7-JA-DDt">
                     <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                    <subviews>
+                        <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="iXA-5s-jro">
+                            <rect key="frame" x="0.0" y="0.0" width="414" height="818"/>
+                            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                            <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="br6-RB-qzt">
+                                <size key="itemSize" width="128" height="128"/>
+                                <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                            </collectionViewFlowLayout>
+                        </collectionView>
+                    </subviews>
                     <color key="backgroundColor" systemColor="systemGray6Color" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="bottom" secondItem="iXA-5s-jro" secondAttribute="bottom" id="5gU-Lz-xmO"/>
+                        <constraint firstAttribute="trailing" secondItem="iXA-5s-jro" secondAttribute="trailing" id="VCQ-nJ-xNr"/>
+                        <constraint firstItem="iXA-5s-jro" firstAttribute="leading" secondItem="Bw7-JA-DDt" secondAttribute="leading" id="k4g-Wm-FvQ"/>
+                        <constraint firstItem="iXA-5s-jro" firstAttribute="top" secondItem="Bw7-JA-DDt" secondAttribute="top" id="oZE-ZB-rT9"/>
+                    </constraints>
                 </view>
             </subviews>
             <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
